Fixed the dcokerFile